・リファクタリング中→エラー時の処理を実装中 ・DataBaseUtilの実装

--- a/res/layout/activity_create_todo.xml
+++ b/res/layout/activity_create_todo.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.50"
         android:ems="10"
-        android:inputType="textMultiLine" >
+        android:inputType="text" >
 
         <requestFocus />
     </EditText>
