・Utilがcommit出来ていなかったので再コミット ・ToDo新規発行時のID発行を別メソッドへ

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_alignLeft="@+id/button1"
         android:layout_below="@+id/button1"
         android:layout_marginTop="15dp"
-        android:text="@string/completeList_title" />
+        android:text="@string/pjMainte_title" />
 
     <Button
         android:id="@+id/button1"
